# weevely3

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  generate.py  index.html  justfile  pyproject.toml  requirements.txt  weevely.1  weevely.py
.github/workflows/: ci.yml
bd/agents/: legacycookie_php.tpl  obfpost_php.tpl  stegaref_php.tpl  stegaref_php_debug.tpl  stegaref_php_unminified.tpl
bd/obfuscators/: cleartext1_php.tpl  obfusc1_php.tpl  phar.tpl
core/: argparsers.py  commons.py  config.py  generate.py  helpparse.py  log.py  loggers.py  messages.py  module.py  modules.py  old_terminal.py  sessions.py  style.py  terminal.py  user_aliases.py  utilities.py  vector.py  vectorlist.py  vectors.py  vectorslist.py  weexceptions.py
core/channels/: channel.py  channels.py
core/channels/legacycookie/: legacycookie.py
core/channels/legacyreferrer/: legacyreferrer.py
core/channels/obfpost/: obfpost.py
core/channels/stegaref/: formatters.py  languages.txt  referrers.tpl  stegaref.py  useragents.tpl
doc/: .buildinfo  genindex.html  index.html  module.html  objects.inv  py-modindex.html  search.html  searchindex.js  vector.html  vectorlist.html  vectors.html  vectorslist.html
doc/_modules/: index.html
doc/_modules/core/: module.html  vector.html  vectorlist.html  vectors.html  vectorslist.html
doc/_sources/: index.txt  module.txt  vector.txt  vectorlist.txt  vectors.txt  vectorslist.txt
modules/audit/: disablefunctionbypass.py  etcpasswd.py  filesystem.py  fingerprint.py  linpeas.py  linuxprivchecker.py  phpconf.py  suidsgid.py
modules/backdoor/: meterpreter.py  reversetcp.py  tcp.py
modules/backdoor/_reversetcp/: tcpserver.py
modules/bruteforce/: sql.py
modules/bruteforce/_sql/: mysql.tpl  pgsql.tpl
modules/file/: archive.py  bzip2.py  cd.py  check.py  clearlog.py  cp.py  download.py  edit.py  enum.py  find.py  grep.py  gzip.py  ls.py  mount.py  read.py  rm.py  tar.py  touch.py  upload.py  upload2web.py  webdownload.py  zip.py
modules/file/_archive/: EasyBzip2.class.php.tpl  EasyGzip.class.php.tpl  EasyTar.class.php  EasyTar.class.php.tpl  EasyZip.class.php  EasyZip.class.php.tpl  archive.tpl  php_bzip2.tpl  php_gzip.tpl  php_tar.tpl  php_tgz.tpl  php_zip.tpl
modules/file/_bzip2/: EasyBzip2.class.php  php_bzip2.tpl
modules/file/_gzip/: EasyGzip.class.php  php_gzip.tpl
modules/file/_tar/: EasyTar.class.php  php_tar.tpl
modules/file/_zip/: EasyZip.class.php  php_zip.tpl
modules/find/: name.py  perms.py
modules/find/_perms/: bfs_walker.tpl
modules/net/: curl.py  ifconfig.py  mail.py  phpproxy.py  proxy.py  scan.py
modules/net/_curl/: php_context.tpl  php_curl.tpl  php_httprequest1.tpl
modules/net/_scan/: fsockopen.tpl
modules/shell/: php.py  sh.py  ssh.py  su.py
modules/sql/: console.py  dump.py
modules/system/: extensions.py  info.py  procs.py
modules/url/: add.py  del.py  list.py
src/bd/agents/: obfpost_php.tpl
src/bd/obfuscators/: phar.tpl
src/core/: argparsers.py  config.py  generate.py  loggers.py  messages.py  module.py  modules.py  sessions.py  terminal.py  vectorlist.py  vectors.py
src/core/channels/: channel.py
src/modules/audit/: disablefunctionbypass.py  filesystem.py  phpconf.py  suidsgid.py
src/modules/backdoor/: tcp.py  (+1 more)
src/utils/: prettify.py  strings.py
src/weevely/: main.py
tests/: base_test.py  config.py  run.sh  test_channels.py  test_file_bzip2.py  test_file_cd.py  test_file_check.py  test_file_download.py  test_file_enum.py  test_file_find.py  test_file_grep.py  test_file_gzip.py  test_file_ls.py  test_file_read.py  test_file_tar.py  test_file_upload.py  test_file_upload2web.py  test_file_zip.py  test_generators.py  test_net_curl.py  test_net_proxy.py  test_shell_php.py  test_shell_sh.py  test_shell_ssh.py  test_shell_su.py  test_sql_console.py  test_system_info.py  test_terminal.py
tests/docker/: 000-default.conf  Dockerfile  entrypoint.sh  prepare-env.sh  run-docker.sh
testsuite/: base_channel.py  base_fs.py  base_test.py  config.py  config.py.orig  test_channels.py  test_file_bzip2.py  test_file_cd.py  test_file_check.py  test_file_download.py  test_file_enum.py  test_file_find.py  test_file_grep.py  test_file_gzip.py  test_file_ls.py  test_file_read.py  test_file_tar.py  test_file_upload.py  test_file_upload2web.py  test_file_zip.py  test_find_name.py  test_find_perms.py  test_generated.py  test_generators.py  test_net_curl.py  test_net_proxy.py  test_shell_php.py  test_shell_sh.py  test_shell_su.py  test_sql_console.py  test_system_info.py  test_terminal.py
tool/: __init__.py  http.py  prettify.py
utils/: __init__.py  code.py  http.py  ipaddr.py  iputil.py  linuxprivchecker.py  prettify.py  strings.py
utils/_http/: user-agents.txt
(+110 files in other folders)
