[project]
name = "weevely3"
version = "4.0.2"
description = "Weaponized web shell"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"prettytable",
	"Mako",
	"PyYAML",
	"python-dateutil",
	"PySocks",
	"pyOpenSSL",
]

[project.urls]
Documentation = "https://github.com/antirais/weevely3"
Repository = "https://github.com/antirais/weevely3"
Tracker = "https://github.com/antirais/weevely3/-/issues"

[project.scripts]
weevely3 = "weevely.main:cli"
