[project]
name = "weevely3"
version = "4.0.2"
description = "Weaponized web shell"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"prettytable",
	"Mako",
	"PyYAML",
	"python-dateutil",
	"PySocks",
	"pyOpenSSL",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
bd = "src/bd"
core = "src/core"
modules = "src/modules"
utils = "src/utils"
weevely = "src/weevely"

[project.urls]
Documentation = "https://github.com/antirais/weevely3"
Repository = "https://github.com/antirais/weevely3"
Tracker = "https://github.com/antirais/weevely3/-/issues"

[project.scripts]
weevely3 = "weevely.main:cli"
